# FFmpeg_Player

./: .gitignore  CMakeLists.txt  README.md
CMakeProject_normal/: CMakeLists.txt  CMakeProject_simple.cpp  CMakeProject_simple.h
CMakeProject_real/: CMakeLists.txt
CMakeProject_real/include/: ffmpeg.h
CMakeProject_real/src/: openal_simple.cpp  sdl_audio_player.cpp  sdl_audio_video_player.cpp  sdl_audioplayer.cpp  sdl_simple.cpp  sdl_video_player.cpp
CMakeProject_simple/: CMakeLists.txt  CMakeLists3.txt  CMakeProject_simple.cpp  sdl.cpp  simplest_ffmpeg_decoder.cpp  simplest_video_play_sdl2.cpp
